generated/checker-for-evaluation/generated/test-Concurrency-7d42e097607c4d246d99225bf2b195b6167a210c/build_logs/0/build_error_log5.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In constructor ‘{anonymous}::SAGenTestChecker::SAGenTestChecker()’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:58:69: error: no matching function for call to ‘clang::ento::BugType::BugType(const char [26], const char [15])’
   58 |       : BT(new BugType("Double free of reset_data", "Race Condition")) {}
      |                                                                     ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:23,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:3:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:42:3: note: candidate: ‘clang::ento::BugType::BugType(const clang::ento::CheckerBase*, llvm::StringRef, llvm::StringRef, bool)’
   42 |   BugType(const CheckerBase *Checker, StringRef Desc,
      |   ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:42:30: note:   no known conversion for argument 1 from ‘const char [26]’ to ‘const clang::ento::CheckerBase*’
   42 |   BugType(const CheckerBase *Checker, StringRef Desc,
      |           ~~~~~~~~~~~~~~~~~~~^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:38:3: note: candidate: ‘clang::ento::BugType::BugType(clang::ento::CheckerNameRef, llvm::StringRef, llvm::StringRef, bool)’
   38 |   BugType(CheckerNameRef CheckerName, StringRef Desc,
      |   ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:38:26: note:   no known conversion for argument 1 from ‘const char [26]’ to ‘clang::ento::CheckerNameRef’
   38 |   BugType(CheckerNameRef CheckerName, StringRef Desc,
      |           ~~~~~~~~~~~~~~~^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:27:7: note: candidate: ‘clang::ento::BugType::BugType(const clang::ento::BugType&)’
   27 | class BugType {
      |       ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:27:7: note:   candidate expects 1 argument, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:46:25: warning: ‘const clang::ento::MemRegion* {anonymous}::getMemRegionFromExpr(const clang::Expr*, clang::ento::CheckerContext&)’ defined but not used [-Wunused-function]
   46 | static const MemRegion* getMemRegionFromExpr(const Expr *E, CheckerContext &C) {
      |                         ^~~~~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
